--- a/agenda/src/pages/event-modal/event-modal.html
+++ b/agenda/src/pages/event-modal/event-modal.html
@@ -38,7 +38,11 @@
   </ion-item>
 
   <button ion-button round (click)="getPictures()">
-    <ion-icon name="pick"></ion-icon> Choose Pictures
+    <ion-icon name="pick"></ion-icon> Choose a Picture
+  </button>
+
+  <button ion-button round (click)="takePicture()">
+    <ion-icon name="pick"></ion-icon> Take a Picture
   </button>
 
   <button ion-button full icon-left (click)="save()">
