--- a/agenda/src/index.html
+++ b/agenda/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+
   <meta charset="UTF-8">
   <title>Ionic App</title>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -28,6 +29,10 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
+
+<!-- Font awesome -->
+
+
 
 </head>
 <body>
